fixing viewport size and step1container not showing in full height

--- a/electron-react-app/src/Styles.css
+++ b/electron-react-app/src/Styles.css
@@ -80,7 +80,7 @@ html, body {
   justify-content: start;
   width: 100%;
   border-radius: 5px;
-  background-color: #F4FAFF;
+  background-color: #efeffb;
 
 }
 
@@ -220,6 +220,7 @@ html, body {
   justify-content: center;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   margin: 0 .5% .5% 0;
 }
 
@@ -233,6 +234,7 @@ html, body {
   border-radius: 5px;
   background-color: white;
   width: 100%;
+  height: 100vh;
 }
 
 .generatorstep1-container h4 {
